DOMjudge Programming Contest Judging System

Version 2.2.5 - SVN
-------------------

Version 2.2.4 - 29 August 2009
------------------------------
 - Remove deprecated define_syslog_variables() and ereg_replace()
   function calls.
 - Merge r2744,2746,2747 from trunk: fix too restrictive team ID.
 - Merge r2760 from trunk: chroot-startstop.sh fails if sudo requires a
   password.
 - Merge r2752,2750(partial) from trunk: security fix in runguard,
   thanks Thomas Rast.
 - Set PHP short_open_tag to On in apache.conf; we use it.

Version 2.2.3 - 8 December 2008
-------------------------------
 - Fix bug in lib.misc.c where a failed execvp would not correctly abort.
 - Merge team manual content improvements from trunk revisions:
   2442 (partial), 2445, 2446, 2453. (Closes: #2153189)
 - Merge judge,admin manual improvements from trunk r2454-2457.
 - Fix error in XML validation schema.
 - Set User-Agent in submit commandline client.
 - Add necessary privileges for plugin DB user and cid field in XML output.
 - Fix bug of submittime==endtime not showing as too-late, thanks Tobias Werth.
 - Removed "feature" of only allowing alnum chars in filename base
   for submit client problem parsing.
 - Replace 'hostname --short' option, fixing inconsistent results.

Version 2.2.2 - 8 October 2008
------------------------------
 - Delete testcases when a problem is deleted. (Closes: #2144325)
 - Fix for Apache config generation when installing into webroot.
 - Use db values instead of the userinput to canonicalise
   any IDs. Solves an issue with blank cells in the scoreboard.
   (Closes #2144718)
 - Add a FLUSH PRIVILEGES statement after user grants during
   installation, as this may be necessary to have MySQL pick up
   all changes correctly.
 - Don't use -fstack-protector under Cygwin. (Closes: #2144713)
 - Add check for colourless problems.

Version 2.2.1 - 31 August 2008
------------------------------
 - Add missing link for adding testcases to a new problem.